--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,6 +20,7 @@ security:
             logout: 
                 path: app_logout
                 target: app_index
+            context: guard_context
             guard:
                 authenticators:
                     - App\Security\LoginFormAuthenticator
@@ -34,4 +35,5 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/game, roles: ROLE_USER }
+        - { path: ^/teams, roles: ROLE_USER }
