Change SymfonyCloud configuration

--- a/.symfony.cloud.yaml
+++ b/.symfony.cloud.yaml
@@ -10,7 +10,6 @@ runtime:
         - ctype
         - iconv
         
-
 build:
     flavor: none
 
@@ -37,3 +36,6 @@ hooks:
         set -x -e
 
         (>&2 symfony-deploy)
+        
+relationships:
+    database: "mydatabase:mysql"
