Change SymfonyCloud configuration

--- a/.symfony/services.yaml
+++ b/.symfony/services.yaml
@@ -1,3 +1,5 @@
 mydatabase:
-  	type: mysql:10.4
-  	disk: 1024
+    # supported versions: 10.0, 10.1, 10.2, 10.3, 10.4
+    # 5.5 is also available but not maintained upstream
+    type: mysql:10.4
+    disk: 1024
