--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "symfony/serializer": "7.1.*",
         "symfony/validator": "7.1.*",
         "symfony/yaml": "7.1.*",
-        "symfony/runtime": "7.1.*"
+        "symfony/runtime": "7.1.*",
+        "symfony/twig-bundle": "7.1.*"
     },
     "extra": {
         "symfony": {
