--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ f1simulator_symfony.sql
 ###> phpstan/phpstan ###
 phpstan.neon
 ###< phpstan/phpstan ###
+
+###> squizlabs/php_codesniffer ###
+/.phpcs-cache
+/phpcs.xml
+###< squizlabs/php_codesniffer ###
