--- a/composer.json
+++ b/composer.json
@@ -54,7 +54,8 @@
         "symfony/phpunit-bridge": "^7.2",
         "symfony/stopwatch": "7.1.*",
         "symfony/web-profiler-bundle": "7.1.*",
-        "phpstan/phpstan": "^2.1"
+        "phpstan/phpstan": "^2.1",
+        "squizlabs/php_codesniffer": "^3.11"
     },
     "autoload": {
         "psr-4": {
