--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,12 @@
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
-        }
+        },
+        "code-check": [
+            "./vendor/bin/phpcs",
+            "./vendor/bin/phpstan analyse -l 0 src tests",
+            "./vendor/bin/phpunit"
+        ]
     },
     "require-dev": {
         "dama/doctrine-test-bundle": "^8.2",
