--- a/composer.json
+++ b/composer.json
@@ -51,12 +51,13 @@
         ]
     },
     "require-dev": {
+        "phpunit/phpunit": "^11.5",
         "dama/doctrine-test-bundle": "^8.2",
         "doctrine/doctrine-fixtures-bundle": "^4.0",
         "symfony/browser-kit": "7.1.*",
         "symfony/css-selector": "7.1.*",
         "symfony/maker-bundle": "^1.61",
-        "symfony/phpunit-bridge": "^7.2",
+        "symfony/phpunit-bridge": "7.1.4",
         "symfony/stopwatch": "7.1.*",
         "symfony/web-profiler-bundle": "7.1.*",
         "phpstan/phpstan": "^2.1",
