--- a/.env.test
+++ b/.env.test
@@ -3,4 +3,5 @@ KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
-DATABASE_URL=mysql://root:@127.0.0.1:3306/F1Simulator_Symfony_test?serverVersion=5.7
+APP_ENV=test
+#DATABASE_URL=mysql://user:password@127.0.0.1:3306/db_name?serverVersion=5.7
