--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,6 +14,7 @@
         <server name="SHELL_VERBOSITY" value="-1" />
         <server name="SYMFONY_PHPUNIT_REMOVE" value="" />
         <server name="SYMFONY_PHPUNIT_VERSION" value="9.5" />
+        <env name="KERNEL_CLASS" value="App\Kernel" />
     </php>
 
     <testsuites>
@@ -22,6 +23,9 @@
         </testsuite>
     </testsuites>
 
+    <coverage>
+    </coverage>
+
     <source>
         <include>
             <directory>src</directory>
@@ -29,6 +33,6 @@
     </source>
 
     <extensions>
-<!--        <extension class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />-->
+        <bootstrap class="DAMA\DoctrineTestBundle\PHPUnit\PHPUnitExtension" />
     </extensions>
 </phpunit>
