Add exception to phpcs for camel case method names in tests

--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -14,6 +14,10 @@
         <exclude name="Generic.Files.LineEndings.InvalidEOLChar"/>
     </rule>
 
+    <rule ref="PSR1.Methods.CamelCapsMethodName">
+        <exclude-pattern>tests/*Test.php</exclude-pattern>
+    </rule>
+
     <file>bin/</file>
     <file>config/</file>
     <file>public/</file>
