--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -18,6 +18,8 @@
         <exclude-pattern>tests/*Test.php</exclude-pattern>
     </rule>
 
+    <exclude-pattern>tests/bootstrap.php</exclude-pattern>
+
     <file>bin/</file>
     <file>config/</file>
     <file>public/</file>
