--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,4 @@ phpstan.neon
 /phpcs.xml
 ###< squizlabs/php_codesniffer ###
 
-###> phpunit/phpunit ###
-/phpunit.xml
-.phpunit.result.cache
-###< phpunit/phpunit ###
+.idea/
