--- a/composer.json
+++ b/composer.json
@@ -65,7 +65,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "": "src/"
         }
     },
     "autoload-dev": {
