--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -18,3 +18,8 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'App\Entity'
                 alias: App
+            Domain:
+                is_bundle: false
+                dir: '%kernel.project_dir%/src/Domain/Entity'
+                prefix: 'Domain\Entity'
+                alias: Domain
