--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,3 +5,7 @@ controllers:
 domain:
     resource: '../src/Domain/Controller'
     type: attribute
+
+computer:
+    resource: '../src/Computer/Controller'
+    type: attribute
