--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,6 +13,26 @@ services:
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
+    Domain\:
+        resource: '../src/Domain/*'
+        exclude:
+            - '../src/Domain/Entity/'
+
+    Computer\:
+        resource: '../src/Computer/*'
+        exclude:
+            - '../src/Computer/Entity/'
+
+    Multiplayer\:
+        resource: '../src/Multiplayer/*'
+        exclude:
+             - '../src/Multiplayer/Entity/'
+
+    Security\:
+        resource: '../src/Security/*'
+        exclude:
+            - '../src/Security/Entity'
+
     Domain\Controller\:
         resource: '../src/Domain/Controller/'
         tags: ['controller.service_arguments']
