--- a/composer.json
+++ b/composer.json
@@ -65,7 +65,8 @@
     },
     "autoload": {
         "psr-4": {
-            "": "src/"
+            "": "src/",
+            "Tests\\": "tests/"
         }
     },
     "autoload-dev": {
