--- a/composer.json
+++ b/composer.json
@@ -61,7 +61,8 @@
         "symfony/stopwatch": "7.1.*",
         "symfony/web-profiler-bundle": "7.1.*",
         "phpstan/phpstan": "^2.1",
-        "squizlabs/php_codesniffer": "^3.11"
+        "squizlabs/php_codesniffer": "^3.11",
+        "deptrac/deptrac": "^4.2"
     },
     "autoload": {
         "psr-4": {
