Further improve security module configuration in deptrac

--- a/deptrac.yaml
+++ b/deptrac.yaml
@@ -56,7 +56,10 @@ deptrac:
             - Shared
 
         Security:
+            - Security_Allowed
             - Shared
+        Security_Allowed:
+            - Security
 
         Shared:
             - Security_Allowed
