--- a/deptrac.yaml
+++ b/deptrac.yaml
@@ -15,6 +15,17 @@ deptrac:
           collectors:
               - { type: class, value: ^Computer\\Contract\\.* }
 
+        - name: Domain
+          collectors:
+              - type: bool
+                must:
+                    - { type: class, value: ^Domain\\.* }
+                must_not:
+                    - { type: layer, value: Domain_Allowed }
+        - name: Domain_Allowed
+          collectors:
+              - { type: class, value: ^Domain\\Contract\\.* }
+
         - name: Multiplayer
           collectors:
               - type: bool
@@ -49,6 +60,9 @@ deptrac:
             - Computer_Allowed
             - Security_Allowed
             - Shared
+
+        Domain:
+            - Domain_Allowed
 
         Multiplayer:
             - Multiplayer_Allowed
