--- a/deptrac.yaml
+++ b/deptrac.yaml
@@ -25,6 +25,7 @@ deptrac:
         - name: Domain_Allowed
           collectors:
               - { type: class, value: ^Domain\\Contract\\.* }
+              - { type: interface, value: ^Domain\\.* }
 
         - name: Multiplayer
           collectors:
@@ -66,6 +67,7 @@ deptrac:
 
         Multiplayer:
             - Multiplayer_Allowed
+            - Domain_Allowed
             - Security_Allowed
             - Shared
 
