--- a/deptrac.yaml
+++ b/deptrac.yaml
@@ -64,6 +64,7 @@ deptrac:
 
         Domain:
             - Domain_Allowed
+            - Shared
 
         Multiplayer:
             - Multiplayer_Allowed
