Move computer module templates to its own folder

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,2 +1,5 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
+    paths:
+        '%kernel.project_dir%/src/Computer/templates': 'computer'
+
