--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,8 @@
         "code-check": [
             "./vendor/bin/phpcs",
             "./vendor/bin/phpstan analyse -l 5 src tests",
-            "./vendor/bin/phpunit"
+            "./vendor/bin/phpunit",
+            "./vendor/bin/deptrac analyse"
         ]
     },
     "require-dev": {
