Add structure for admin module

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,7 +1,8 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
     paths:
-        '%kernel.project_dir%/src/Computer/templates': 'computer'
-        '%kernel.project_dir%/src/Domain/templates': 'domain'
-        '%kernel.project_dir%/src/Multiplayer/templates': 'multiplayer'
-        '%kernel.project_dir%/src/Security/templates': 'security'
+        '%kernel.project_dir%/src/Computer/Templates': 'computer'
+        '%kernel.project_dir%/src/Domain/Templates': 'domain'
+        '%kernel.project_dir%/src/Multiplayer/Templates': 'multiplayer'
+        '%kernel.project_dir%/src/Security/Templates': 'security'
+        '%kernel.project_dir%/src/Admin/Templates': 'admin'
