--- a/config/services.yaml
+++ b/config/services.yaml
@@ -33,6 +33,9 @@ services:
         exclude:
             - '../src/Security/Entity'
 
+    Admin\:
+        resource: '../src/Admin/*'
+
     Domain\Controller\:
         resource: '../src/Domain/Controller/'
         tags: ['controller.service_arguments']
@@ -48,6 +51,10 @@ services:
     Security\Controller\:
         resource: '../src/Security/Controller/'
         tags: ['controller.service_arguments']
+
+    Admin\Controller\:
+        resource: '../src/Admin/Controller/'
+        tags: [ 'controller.service_arguments' ]
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
