Add delete button with basic structure

--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -8,3 +8,9 @@ services:
 
     Multiplayer\Service\SecretGenerator:
         public: true
+
+    Multiplayer\MultiplayerFacadeInterface:
+        public: true
+
+    Multiplayer\MultiplayerFacade:
+        public: true
