--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,20 @@ services:
         volumes:
             - db_data:/var/lib/mysql
             - ./docker/mysql_init.sql:/docker-entrypoint-initdb.d/init.sql
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin
+        container_name: f1simulator_phpmyadmin
+        environment:
+            PMA_HOST: mysql
+            PMA_USER: f1simulator
+            PMA_PASSWORD: password
+        depends_on:
+            - mysql
+        ports:
+            - "8080:80"
+        volumes:
+            - phpmyadmin_data:/etc/phpmyadmi
 
 volumes:
     db_data:
+    phpmyadmin_data:
