--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,12 @@
         "symfony/validator": "7.1.*",
         "symfony/yaml": "7.1.*",
         "symfony/runtime": "7.1.*",
-        "symfony/twig-bundle": "7.1.*"
+        "symfony/twig-bundle": "7.1.*",
+        "behat/behat": "^3.29",
+        "behat/mink": "^1.13",
+        "behat/mink-browserkit-driver": "^2.3",
+        "friends-of-behat/symfony-extension": "^2.6",
+        "symfony/browser-kit": "7.1.*"
     },
     "extra": {
         "symfony": {
@@ -59,7 +64,6 @@
         "phpunit/phpunit": "^11.5",
         "dama/doctrine-test-bundle": "^8.2",
         "doctrine/doctrine-fixtures-bundle": "^4.0",
-        "symfony/browser-kit": "7.1.*",
         "symfony/css-selector": "7.1.*",
         "symfony/maker-bundle": "^1.61",
         "symfony/phpunit-bridge": "7.1.4",
@@ -67,8 +71,7 @@
         "symfony/web-profiler-bundle": "7.1.*",
         "phpstan/phpstan": "^2.1",
         "squizlabs/php_codesniffer": "^3.11",
-        "deptrac/deptrac": "^4.2",
-        "behat/behat": "^3.29"
+        "deptrac/deptrac": "^4.2"
     },
     "autoload": {
         "psr-4": {
