--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,7 @@
             "./vendor/bin/phpcs",
             "./vendor/bin/phpstan analyse -l 5 src tests",
             "./vendor/bin/phpunit",
+            "./vendor/bin/behat",
             "./vendor/bin/deptrac analyse"
         ]
     },
