--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "behat/mink": "^1.13",
         "behat/mink-browserkit-driver": "^2.3",
         "friends-of-behat/symfony-extension": "^2.6",
-        "symfony/browser-kit": "7.1.*"
+        "symfony/browser-kit": "7.1.*",
+        "symfony/translation": "7.1.*"
     },
     "extra": {
         "symfony": {
