--- a/config/packages/translation.yaml
+++ b/config/packages/translation.yaml
@@ -1,5 +1,8 @@
 framework:
-    default_locale: en
+    default_locale: pl
     translator:
         default_path: '%kernel.project_dir%/translations'
-        providers:
+        fallback:
+            - en
+        providers: ~
+    enabled_locales: [ 'pl', 'en' ]
