--- a/.env
+++ b/.env
@@ -27,3 +27,7 @@ APP_SECRET=94d148aafc027d1604ae1e2e10723c6f
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #DATABASE_URL=mysql://user:password@127.0.0.1:3306/db_name?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+MAILER_DSN=null://null
+###< symfony/mailer ###
