--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "friends-of-behat/symfony-extension": "^2.6",
         "symfony/browser-kit": "7.1.*",
         "symfony/translation": "7.1.*",
-        "symfony/mailer": "7.1.*"
+        "symfony/mailer": "7.1.*",
+        "symfony/messenger": "7.1.*"
     },
     "extra": {
         "symfony": {
