Add mailhog to docker

--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ APP_SECRET=94d148aafc027d1604ae1e2e10723c6f
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=null://null
+MAILER_DSN=smtp://mailhog:1025
 ###< symfony/mailer ###
 
 ###> symfony/messenger ###
