Move app email to env

--- a/.env
+++ b/.env
@@ -30,6 +30,7 @@ APP_SECRET=94d148aafc027d1604ae1e2e10723c6f
 
 ###> symfony/mailer ###
 MAILER_DSN=smtp://mailhog:1025
+MAILER_FROM_ADDRESS=f1simulator@example.com
 ###< symfony/mailer ###
 
 ###> symfony/messenger ###
