--- a/.env.test
+++ b/.env.test
@@ -4,4 +4,5 @@ APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 APP_ENV=test
+MAILER_FROM_ADDRESS=f1simulator@example.com
 #DATABASE_URL=mysql://user:password@127.0.0.1:3306/db_name?serverVersion=5.7
