--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "symfony/translation": "7.1.*",
         "symfony/mailer": "7.1.*",
         "symfony/messenger": "7.1.*",
-        "symfony/doctrine-messenger": "7.1.*"
+        "symfony/doctrine-messenger": "7.1.*",
+        "symfony/monolog-bundle": "^3.11"
     },
     "extra": {
         "symfony": {
