--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -1,6 +1,7 @@
 monolog:
     channels:
         - deprecation # Deprecations are logged in the dedicated "deprecation" channel when it exists
+        - mailer
 
 when@dev:
     monolog:
@@ -9,7 +10,12 @@ when@dev:
                 type: stream
                 path: "%kernel.logs_dir%/%kernel.environment%.log"
                 level: debug
-                channels: ["!event"]
+                channels: ["!event", "!mailer"]
+            mailer:
+                type: stream
+                path: "%kernel.logs_dir%/mailer/mailer_%kernel.environment%.log"
+                level: debug
+                channels: [mailer]
             console:
                 type: console
                 process_psr_3_messages: false
@@ -39,6 +45,11 @@ when@prod:
                 excluded_http_codes: [404, 405]
                 channels: ["!deprecation"]
                 buffer_size: 50 # How many messages should be saved? Prevent memory leaks
+            mailer:
+                type: fingers_crossed
+                action_level: error
+                handler: mailer_nested
+                channels: [mailer]
             nested:
                 type: stream
                 path: php://stderr
