Style welcome mail

--- a/.env
+++ b/.env
@@ -39,3 +39,5 @@ MAILER_FROM_ADDRESS=f1simulator@example.com
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
+
+APP_DOMAIN=localhost:8000
