--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     mailer_from_address: '%env(MAILER_FROM_ADDRESS)%'
+    app_domain: '%env(APP_DOMAIN)%'
 
 services:
     # default configuration for services in *this* file
