Add elasticsearch to docker

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,7 +41,19 @@ services:
         ports:
             - "8025:8025"
             - "1025:1025"
+    elasticsearch:
+        image: docker.elastic.co/elasticsearch/elasticsearch:8.13.4
+        container_name: f1simulator_elasticsearch
+        environment:
+            - discovery.type=single-node
+            - xpack.security.enabled=false
+            - ES_JAVA_OPTS=-Xms512m -Xmx512m
+        ports:
+            - "9200:9200"
+        volumes:
+            - es_data:/usr/share/elasticsearch/data
 
 volumes:
     db_data:
     phpmyadmin_data:
+    es_data:
