--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -52,6 +52,15 @@ services:
             - "9200:9200"
         volumes:
             - es_data:/usr/share/elasticsearch/data
+    kibana:
+        image: docker.elastic.co/kibana/kibana:8.13.4
+        container_name: f1simulator_kibana
+        environment:
+            ELASTICSEARCH_HOSTS: http://elasticsearch:9200
+        ports:
+            - "5601:5601"
+        depends_on:
+            - elasticsearch
 
 volumes:
     db_data:
