--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "symfony/mailer": "7.1.*",
         "symfony/messenger": "7.1.*",
         "symfony/doctrine-messenger": "7.1.*",
-        "symfony/monolog-bundle": "^3.11"
+        "symfony/monolog-bundle": "^3.11",
+        "elasticsearch/elasticsearch": "^9.3"
     },
     "extra": {
         "symfony": {
@@ -50,7 +51,8 @@
     "config": {
         "allow-plugins": {
             "symfony/flex": true,
-            "symfony/runtime": true
+            "symfony/runtime": true,
+            "php-http/discovery": true
         }
     },
     "scripts": {
