Add elastic module and monolog configuration to save mailer logs to elasticsearch

--- a/.env
+++ b/.env
@@ -41,3 +41,4 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 APP_DOMAIN=localhost:8000
+ELASTIC_HOST=http://elasticsearch:9200
