--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -19,7 +19,7 @@ when@dev:
                 channels: [mailer]
             mailer_elastic:
                 type: service
-                id: Elastic\ElasticMailHandler
+                id: Elastic\ElasticMailerHandler
                 channels: [mailer_elastic]
                 level: info
             console:
@@ -49,13 +49,18 @@ when@prod:
                 action_level: error
                 handler: nested
                 excluded_http_codes: [404, 405]
-                channels: ["!deprecation"]
+                channels: ["!deprecation", "!mailer", "!mailer_elastic"]
                 buffer_size: 50 # How many messages should be saved? Prevent memory leaks
             mailer:
                 type: fingers_crossed
                 action_level: error
                 handler: mailer_nested
                 channels: [mailer]
+            mailer_elastic:
+                type: service
+                id: Elastic\ElasticMailerHandler
+                channels: [mailer_elastic]
+                level: info
             nested:
                 type: stream
                 path: php://stderr
