--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -23,6 +23,7 @@
     <exclude-pattern>config/preload.php</exclude-pattern>
     <exclude-pattern>config/bootstrap.php</exclude-pattern>
     <exclude-pattern>src/Kernel.php</exclude-pattern>
+    <exclude-pattern>config/secrets/dev/</exclude-pattern>
 
     <file>bin/</file>
     <file>config/</file>
