Finish confirming account code

--- a/.env
+++ b/.env
@@ -40,5 +40,5 @@ MAILER_FROM_ADDRESS=f1simulator@example.com
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
-APP_DOMAIN=localhost:8000
+APP_DOMAIN=http://localhost:8000
 ELASTIC_HOST=http://elasticsearch:9200
