--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -15,6 +15,7 @@ security:
             security: false
         main:
             lazy: true
+            user_checker: Security\Service\UserChecker
             provider: app_user_provider
             form_login:
                 login_path: app_login
