--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,10 @@
 {
     "type": "project",
     "license": "proprietary",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
-        "php": ">=8.2",
+        "php": ">=8.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-dom": "*",
@@ -10,39 +12,51 @@
         "ext-simplexml": "*",
         "ext-mbstring": "*",
         "symfony/apache-pack": "^1.0",
-        "symfony/asset": "^7.2",
-        "symfony/console": "^6.4",
-        "symfony/dotenv": "^7.2",
-        "symfony/flex": "^2.4",
-        "symfony/form": "7.1.*",
-        "symfony/framework-bundle": "7.1.*",
-        "doctrine/dbal": "^3",
-        "doctrine/doctrine-bundle": "^2.13",
-        "doctrine/doctrine-migrations-bundle": "^3.3",
-        "doctrine/orm": "^3.3",
+        "symfony/asset": "^8.0",
+        "symfony/console": "^8.0",
+        "symfony/dotenv": "^8.0",
+        "symfony/flex": "^2.10",
+        "symfony/form": "8.0.*",
+        "symfony/framework-bundle": "8.0.*",
+        "doctrine/dbal": "^4.4",
+        "doctrine/doctrine-bundle": "^3.2",
+        "doctrine/doctrine-migrations-bundle": "^4.0",
+        "doctrine/orm": "^3.6",
         "symfony/requirements-checker": "^2.0",
-        "symfony/security-bundle": "7.1.*",
-        "symfony/serializer": "7.1.*",
-        "symfony/validator": "7.1.*",
-        "symfony/yaml": "7.1.*",
-        "symfony/runtime": "7.1.*",
-        "symfony/twig-bundle": "7.1.*",
-        "behat/behat": "^3.29",
+        "symfony/security-bundle": "8.0.*",
+        "symfony/serializer": "8.0.*",
+        "symfony/validator": "8.0.*",
+        "symfony/yaml": "8.0.*",
+        "symfony/runtime": "8.0.*",
+        "symfony/twig-bundle": "8.0.*",
+        "symfony/browser-kit": "8.0.*",
+        "symfony/translation": "8.0.*",
+        "symfony/mailer": "8.0.*",
+        "symfony/messenger": "8.0.*",
+        "symfony/doctrine-messenger": "8.0.*",
+        "symfony/monolog-bundle": "^4.0",
+        "elasticsearch/elasticsearch": "^8.13"
+    },
+    "require-dev": {
+        "behat/behat": "4.*",
         "behat/mink": "^1.13",
         "behat/mink-browserkit-driver": "^2.3",
-        "friends-of-behat/symfony-extension": "^2.6",
-        "symfony/browser-kit": "7.1.*",
-        "symfony/translation": "7.1.*",
-        "symfony/mailer": "7.1.*",
-        "symfony/messenger": "7.1.*",
-        "symfony/doctrine-messenger": "7.1.*",
-        "symfony/monolog-bundle": "^3.11",
-        "elasticsearch/elasticsearch": "^8.13"
+        "phpunit/phpunit": "^13.0",
+        "dama/doctrine-test-bundle": "^8.6",
+        "symfony/css-selector": "8.0.*",
+        "doctrine/doctrine-fixtures-bundle": "^4.3",
+        "symfony/maker-bundle": "^1.66",
+        "symfony/phpunit-bridge": "^8.0",
+        "symfony/stopwatch": "8.0.*",
+        "symfony/web-profiler-bundle": "8.0.*",
+        "phpstan/phpstan": "^2.1",
+        "squizlabs/php_codesniffer": "^4.0",
+        "deptrac/deptrac": "^4.6"
     },
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "7.1.*"
+            "require": "8.0.*"
         }
     },
     "conflict": {
@@ -67,19 +81,6 @@
             "./vendor/bin/behat",
             "./vendor/bin/deptrac analyse"
         ]
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^11.5",
-        "dama/doctrine-test-bundle": "^8.2",
-        "doctrine/doctrine-fixtures-bundle": "^4.0",
-        "symfony/css-selector": "7.1.*",
-        "symfony/maker-bundle": "^1.61",
-        "symfony/phpunit-bridge": "7.1.4",
-        "symfony/stopwatch": "7.1.*",
-        "symfony/web-profiler-bundle": "7.1.*",
-        "phpstan/phpstan": "^2.1",
-        "squizlabs/php_codesniffer": "^3.11",
-        "deptrac/deptrac": "^4.2"
     },
     "autoload": {
         "psr-4": {
