Get version from file

--- a/.env
+++ b/.env
@@ -42,3 +42,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 APP_DOMAIN=http://localhost:8000
 ELASTIC_HOST=http://elasticsearch:9200
+
+APP_VERSION_FILE=%kernel.project_dir%/.version
