--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -6,3 +6,5 @@ twig:
         '%kernel.project_dir%/src/Security/Templates': 'security'
         '%kernel.project_dir%/src/Admin/Templates': 'admin'
         '%kernel.project_dir%/src/Mailer/Templates': 'mailer'
+    globals:
+        app_version: '%app_version%'
