--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,6 +7,7 @@ parameters:
     mailer_from_address: '%env(MAILER_FROM_ADDRESS)%'
     app_domain: '%env(APP_DOMAIN)%'
     elastic_host: '%env(ELASTIC_HOST)%'
+    app_version: '%env(file:resolve:APP_VERSION_FILE)%'
 
 services:
     # default configuration for services in *this* file
