Fix behat tests

--- a/.env.test
+++ b/.env.test
@@ -9,3 +9,5 @@ MAILER_FROM_ADDRESS=f1simulator@example.com
 
 # Immiadiately rejects elastisearch request, good for testing purposes
 ELASTIC_HOST=127.0.0.1:1
+
+APP_VERSION_FILE=%kernel.project_dir%/.version
